@@ -1,8 +1,6 @@
 # The series tst2?? is a patched version of suite_00
 # The first and foremost BAT operations
 
-o:=calc.oid(20000000);
-calc.setoid(o);
 #test basic functionality of the BAT library.
 #focussed on integers
 
